# ecosopis

./: manage.py  package-lock.json  package.json  pyproject.toml  replit.md
api/: models.py  serializers.py  urls.py  views.py
api/migrations/: 0001_initial.py  0002_remove_itempedido_preco_itempedido_preco_unitario_and_more.py
attached_assets/: Pasted-Desenvolva-um-e-commerce-completo-para-a-marca-ECOSOPIS_1767898588243.txt  Pasted-Voc-um-desenvolvedor-full-stack-s-nior-com-forte-dom-ni_1767725928985.txt
client/: requirements.md
client/src/: App.tsx  index.css
client/src/components/: CartDrawer.tsx  ChatWidget.tsx  Navigation.tsx  ProductCard.tsx  footer.tsx  navbar.tsx  skin-quiz.tsx  theme-provider.tsx
client/src/hooks/: use-auth.ts  use-auth.tsx  use-cart.ts  use-chat.ts  use-orders.ts  use-products.ts  use-store.ts
client/src/pages/: AdminDashboard.tsx  Auth.tsx  BoxSubscription.tsx  Catalog.tsx  Home.tsx  ProductDetails.tsx  Quiz.tsx  admin-dashboard.tsx  auth-pages.tsx  catalog.tsx  checkout.tsx  home.tsx  not-found.tsx
ecosopis_backend/: asgi.py  settings.py  wsgi.py
server/: auth.ts  routes.ts  storage.ts
shared/: routes.ts  schema.ts
